--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ subjects:
 - !lcsh 'Artists -- Fiction'
 - !lcsh 'Travel -- Fiction'
 - !lcsh 'Short stories'
+- GITenberg
 title: The Parthenon By Way Of Papendrecht
 url: http://www.gutenberg.org/ebooks/23703
